# saltext-vcf

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  GAPS.md  LICENSE  NOTICE  README.md  noxfile.py  pyproject.toml
.github/workflows/: deploy-package-action.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
changelog/: +cli-example-doc-harness.added.md  +datastore-file-force.added.md  +esxi-idempotency.fixed.md  +esxi-real-host-fixes.fixed.md  +esxi-rest-to-pyvmomi-soap.changed.md  +esxi-vlcm-patching.added.md  +installer-bootstrap-pyvmomi.added.md  +nsx-vpn-resource-type.fixed.md  +rename-to-saltext-vcf.breaking.md  +sddc-async-patch-building-blocks.added.md  +speculative-installer-modules.removed.md  +standalone-esxi-support.added.md  +topology-and-ovftool-clients.added.md  +vc-patch.added.md  +vcenter-9-rest-shape-fixes.fixed.md  +vcenter-configurable-timeout.added.md  +vcenter-datacenter-create.fixed.md  +vcf-automation-integration.added.md  +vcfops-fleet-certificates.added.md  +vcfops-fleet-password-and-certificate.added.md  +vcfops-resource-group-members.added.md  +vds-dpg-wait-for-soap-task.fixed.md  +vim-host-datastore-state.added.md  +vim-vm-cdrom-client.added.md  +vim-vm-nic-vmk-only.fixed.md  +vim-vm-present-parallel.fixed.md  +vim-vm-state.added.md  +vmsp-controls.added.md  +vmsp-resource.added.md  3.added.md
docs/: conf.py  index.rst
docs/examples/: index.md  nsx.md  sddc-manager.md  states-declarative.md  vcenter.md  vcf-operations.md  vcf-vm-resource.md  vks.md  vmware-vm-resource.md
docs/ref/clients/: index.rst  saltext.vcf.clients.cluster_config.rst  saltext.vcf.clients.cluster_config_software.rst  saltext.vcf.clients.esxi_advanced.rst  saltext.vcf.clients.esxi_firewall.rst  saltext.vcf.clients.esxi_host.rst  saltext.vcf.clients.esxi_ntp.rst  saltext.vcf.clients.esxi_service.rst  saltext.vcf.clients.esxi_syslog.rst  saltext.vcf.clients.esxi_vlcm.rst  saltext.vcf.clients.fleet_password.rst  saltext.vcf.clients.installer_bringup.rst  saltext.vcf.clients.installer_credentials.rst  saltext.vcf.clients.installer_logs.rst  saltext.vcf.clients.installer_system.rst  saltext.vcf.clients.nsx_cluster.rst  saltext.vcf.clients.nsx_compute_collection.rst  saltext.vcf.clients.nsx_context_profile.rst  saltext.vcf.clients.nsx_dhcp.rst  saltext.vcf.clients.nsx_edge.rst  saltext.vcf.clients.nsx_edge_cluster.rst  saltext.vcf.clients.nsx_firewall_rule.rst  saltext.vcf.clients.nsx_group.rst  saltext.vcf.clients.nsx_ids.rst  saltext.vcf.clients.nsx_ip_block.rst  saltext.vcf.clients.nsx_ip_pool.rst  saltext.vcf.clients.nsx_ipsec_vpn.rst  saltext.vcf.clients.nsx_l2_vpn.rst  saltext.vcf.clients.nsx_lb_app_profile.rst  saltext.vcf.clients.nsx_lb_monitor.rst  saltext.vcf.clients.nsx_lb_persistence.rst  saltext.vcf.clients.nsx_lb_pool.rst  saltext.vcf.clients.nsx_lb_service.rst  saltext.vcf.clients.nsx_lb_virtual_server.rst  saltext.vcf.clients.nsx_nat.rst  saltext.vcf.clients.nsx_node.rst  saltext.vcf.clients.nsx_qos_profile.rst  saltext.vcf.clients.nsx_role_binding.rst  saltext.vcf.clients.nsx_security_policy.rst  saltext.vcf.clients.nsx_segment.rst  (+296 more)
docs/ref/modules/: index.rst  saltext.vcf.modules.vcf_cluster_config.rst  saltext.vcf.modules.vcf_cluster_config_software.rst  saltext.vcf.modules.vcf_esxi_advanced.rst  saltext.vcf.modules.vcf_esxi_firewall.rst  saltext.vcf.modules.vcf_esxi_host.rst  saltext.vcf.modules.vcf_esxi_ntp.rst  saltext.vcf.modules.vcf_esxi_service.rst  saltext.vcf.modules.vcf_esxi_syslog.rst  saltext.vcf.modules.vcf_esxi_vlcm.rst  saltext.vcf.modules.vcf_fleet_password.rst  saltext.vcf.modules.vcf_installer_bringup.rst  saltext.vcf.modules.vcf_installer_credentials.rst  saltext.vcf.modules.vcf_installer_logs.rst  saltext.vcf.modules.vcf_installer_system.rst  saltext.vcf.modules.vcf_nsx_cluster.rst  saltext.vcf.modules.vcf_nsx_compute_collection.rst  saltext.vcf.modules.vcf_nsx_context_profile.rst  saltext.vcf.modules.vcf_nsx_dhcp.rst  saltext.vcf.modules.vcf_nsx_edge.rst  saltext.vcf.modules.vcf_nsx_edge_cluster.rst  saltext.vcf.modules.vcf_nsx_firewall_rule.rst  saltext.vcf.modules.vcf_nsx_group.rst  saltext.vcf.modules.vcf_nsx_ids.rst  saltext.vcf.modules.vcf_nsx_ip_block.rst  saltext.vcf.modules.vcf_nsx_ip_pool.rst  saltext.vcf.modules.vcf_nsx_ipsec_vpn.rst  saltext.vcf.modules.vcf_nsx_l2_vpn.rst  saltext.vcf.modules.vcf_nsx_lb.rst  saltext.vcf.modules.vcf_nsx_nat.rst  saltext.vcf.modules.vcf_nsx_node.rst  saltext.vcf.modules.vcf_nsx_qos_profile.rst  saltext.vcf.modules.vcf_nsx_role_binding.rst  saltext.vcf.modules.vcf_nsx_security_policy.rst  saltext.vcf.modules.vcf_nsx_segment.rst  saltext.vcf.modules.vcf_nsx_service.rst  saltext.vcf.modules.vcf_nsx_tier0.rst  saltext.vcf.modules.vcf_nsx_tier1.rst  saltext.vcf.modules.vcf_nsx_transport_node.rst  saltext.vcf.modules.vcf_nsx_transport_zone.rst  (+276 more)
docs/ref/resources/: index.rst  saltext.vcf.resources.esxi.rst  saltext.vcf.resources.nsx.rst  saltext.vcf.resources.sddc.rst  saltext.vcf.resources.vcenter.rst  saltext.vcf.resources.vcf_vm.rst  saltext.vcf.resources.vcfops.rst  saltext.vmware.resources.esxi.rst  saltext.vmware.resources.nsx.rst  (+4 more)
docs/topics/: configuration.md  installation.md  resources-framework.md  vcfa-integration.md  vks-bridge.md  vmsp-mediated.md  vsan-soap.md
tests/: _doc_examples.py  conftest.py
tests/unit/: test_doc_examples.py  test_orchestrate_sls.py
(+1232 files in other folders)
