[build-system]
requires = [
    "wheel",
    "setuptools>=50.3.2",
    "setuptools_scm[toml]>=3.4",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/saltext/vcf/version.py"
write_to_template = "__version__ = \"{version}\"\n"

[project]
name = "saltext.vcf"
description = "Salt Extension for VMware VCF infrastructure management (vCenter, NSX, SDDC Manager, VCF Operations, VKS, VMSP)"
authors = [
    {name = "VCF Platform Engineering", email = "vcf-platform@broadcom.net"},
]
keywords = [
    "salt-extension",
    "vcf",
    "vmware",
    "vsphere",
    "nsx",
    "sddc-manager",
]
license = {text = "Apache Software License"}
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">= 3.10"
dynamic = ["version"]
dependencies = [
    "salt>=3006",
    "requests>=2.3.0",
    "pyvmomi>=8.0.0",
    "pywbem>=1.7.0",
    # SSH transport for appliance-local SDDC Manager controls (/etc/passwd,
    # localhost appliancemanager API). Bundled with Salt, pinned here for clarity.
    "paramiko>=2.7.0",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/salt-extensions/saltext-vcf"
Documentation = "https://salt-extensions.github.io/saltext-vcf/"
Source = "https://github.com/salt-extensions/saltext-vcf"
Tracker = "https://github.com/salt-extensions/saltext-vcf/issues"

[project.optional-dependencies]
vcenter = ["vmware-vcenter>=9.0.0.0"]
sddc = ["vmware-vcf>=0.4.0"]
vks = ["saltext.kubernetes>=2.1.0", "kubernetes>=27.2.0"]
changelog = ["towncrier==25.8.0"]
dev = [
    "nox[uv]>=2024.3,!=2025.05.01",
    "pre-commit>=2.21.0",
]
# Used by editor integration / dev automation. Pass ``--extras`` to the
# init helper to install these automatically.
dev_extra = [
    "black==26.3.1",
    # pylint 4.0.4 caps isort<8; relax the pin until pylint catches up.
    "isort>=5,<8,!=5.13",
    "coverage==7.13.4",
]
docs = [
  "sphinx",
  "sphinx-prompt",
  "sphinxcontrib-spelling",
  "sphinx-copybutton",
  "towncrier==25.8.0",
  "sphinxcontrib-towncrier",
  "myst_parser",
  "furo",
  "sphinx-inline-tabs",
]
docsauto = ["sphinx-autobuild"]
lint = [
    "pylint==4.0.4",
]
tests = [
    "pytest>=7.2.0",
    "pytest-salt-factories>=1.0.0",
    "pytest-helpers-namespace>=2019.1.8",
    "pytest-timeout",
    "pytest-instafail",
    "responses>=0.25.0",
    # Salt declares these in requirements/base.txt; pip/uv don't always pull
    # them when building salt from sdist (notably Windows). Pin here for tests.
    "tornado>=6.3,<7",
    "looseversion",
    "packaging",
    "psutil",
    "pyzmq",
    "msgpack",
    "pyyaml",
    "markupsafe",
    "jinja2",
    "pycryptodomex",
    "python-dateutil",
    "distro",
]

[project.entry-points."salt.loader"]
"saltext.vcf" = "saltext.vcf"

[tool.uv]
# Salt's legacy setup.py requires old setuptools.
# Since uv 0.6.0, it does not fall back to reading requirements from egg-info.
build-constraint-dependencies = ["setuptools<69"]

[tool.setuptools]
zip-safe = false
include-package-data = true
platforms = ["any"]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.distutils.bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[tool.distutils.sdist]
owner = "root"
group = "root"

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.black]
line-length = 100

[tool.isort]
force_single_line = true
skip = ["src/saltext/vcf/__init__.py"]
profile = "black"
line_length = 100

[tool.towncrier]
package = "saltext.vcf"
filename = "CHANGELOG.md"
template = "changelog/.template.jinja"
directory = "changelog/"
start_string = "# Changelog\n"
underlines = ["", "", ""]
title_format = "## {version} ({project_date})"
issue_format = "[#{issue}](https://github.com/salt-extensions/saltext-vcf/issues/{issue})"

[[tool.towncrier.type]]
directory = "breaking"
name = "Breaking changes"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

# While we currently don't use ruff for linting, it's helpful to include
# these settings in case a user has setup ruff in their editor environment.
[tool.ruff]
builtins = [
    "__opts__",
    "__salt__",
    "__pillar__",
    "__grains__",
    "__context__",
    "__runner__",
    "__ret__",
    "__env__",
    "__low__",
    "__states__",
    "__lowstate__",
    "__running__",
    "__active_provider_name__",
    "__master_opts__",
    "__jid_event__",
    "__instance_id__",
    "__salt_system_encoding__",
    "__proxy__",
    "__serializers__",
    "__reg__",
    "__executors__",
    "__events__",
]
